k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: articles-api
  labels:
    app: articles-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: articles-api
  template:
    metadata:
      labels:
        app: articles-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - articles-api
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: articles-api
          image: divyamdocker1/article-app:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            allowPrivilegeEscalation: false
