k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: articles-api
  labels:
    app: articles-api
    app.kubernetes.io/part-of: jetstream
spec:
  type: ClusterIP
  selector:
    app: articles-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
